--- a/app/views/partials/staff.html
+++ b/app/views/partials/staff.html
@@ -1,13 +1,21 @@
-<section class="staff">
+<section class="staff" ng-controller="StaffCtrl">
 
     <h1>Management</h1>
 
-    <div class="row">
-        <div class="col-md-6">
-            <staff-member key="eyalRubin"></staff-member>
-        </div>
-        <div class="col-md-6">
-            <staff-member key="alonStrikovsky"></staff-member>
+    <div masonry column-width="400">
+        <div class="masonry-brick" ng-repeat="datum in membersData">
+            <staff-member member-data="datum"></staff-member>
         </div>
     </div>
+
+    <!--
+        <div class="row">
+            <div class="col-md-6">
+                <staff-member key="eyalRubin"></staff-member>
+            </div>
+            <div class="col-md-6">
+                <staff-member key="alonStrikovsky"></staff-member>
+            </div>
+        </div>
+    -->
 </section>
