--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -27,7 +27,7 @@ body {
   border-bottom: 1px solid $mainGradientBottom;
 }
 
-#top-links {
+#header-top {
   height: $topLinksHeight;
   line-height: $topLinksHeight;
   a {
