--- a/app/styles/_staff.scss
+++ b/app/styles/_staff.scss
@@ -9,7 +9,13 @@
     padding: $boxPad;
     border: 1px solid #eee;
     background-color: #f6f6f6;
-    cursor: pointer;
+    //cursor: pointer;
+
+    &:hover {
+      .member-image {
+        @include c-grayscale-reset;
+      }
+    }
 
     h2 {
       margin-top: 0;
@@ -24,6 +30,7 @@
         @include border-top-radius(0);
         @include border-bottom-radius(0);
       }
+      @include c-grayscale;
     }
 
 /*
