--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,7 @@
 /* common */
 @import "fonts";
 @import "variables";
+@import "functions";
 @import "images";
 @import "colors";
 /* sass definitions overrides */
