--- a/app/views/header.html
+++ b/app/views/header.html
@@ -4,7 +4,7 @@
     <a tabindex="1" title="to navigation" href="#main-nav" ng-hide="true">Jump To Navigation</a>
 
 
-    <div id="top-links" class="row">
+    <div id="header-top" class="row">
         <nav class="col-md-12">
             <!-- NOTE: tab-indexes 51-70 are reserved for low priority links -->
             <ul class="list-inline pull-right">
@@ -18,7 +18,7 @@
         </nav>
     </div>
 
-    <div id="header-nav" class="row">
+    <div id="header-main" class="row">
         <div class="col-md-3">
             <a tabindex="6" href="/" class="logo">
                 <span class="one">123</span>
@@ -30,7 +30,13 @@
             <nav id="main-nav">
                 <ul class="list-inline pull-right">
                     <li>
-                        <a tabindex="11" href="/services.html">Global Services</a>
+                        <a tabindex="11" href="/services.html">Services</a>
+<!--
+                        <ul class="list-unstyled">
+                            <li><a href="#">Global Services</a></li>
+                            <li><a href="#">Engagement Models</a></li>
+                        </ul>
+-->
                     </li>
                     <li>
                         <a tabindex="12" href="/training.html">Training</a>
