--- a/app/views/partials/services.html
+++ b/app/views/partials/services.html
@@ -6,10 +6,9 @@
     <div class="global-services">
         <h2>{{ model.globalServices.title }}</h2>
         <p>{{ model.globalServices.excerpt }}</p>
-
         <div class="global-services-map">
             <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-                    src="https://www.google.com/maps/ms?msa=0&amp;msid=201762555821246510096.0004e538a20e95f2b2269&amp;hl=en&amp;ie=UTF8&amp;ll=36.38711,8.745514&amp;spn=47.094341,261.892385&amp;t=m&amp;output=embed"></iframe>
+                    src="https://www.google.com/maps/ms?msa=0&msid=201762555821246510096.0004e538a20e95f2b2269&hl=en&ie=UTF8&ll=36.38711,8.745514&spn=47.094341,261.892385&t=m&output=embed"></iframe>
         </div>
     </div>
 
@@ -17,14 +16,11 @@
         <h2>{{ model.engagementModels.title }}</h2>
         <p>{{ model.engagementModels.excerpt }}</p>
         <p>{{ model.servicesPrefix }}</p>
-
         <div ng-repeat="service in model.services">
             <h3>{{ service.title }}</h3>
             <p>{{ service.excerpt }}</p>
-            <h4>{{ model.serviceDescriptionTitle }}</h4>
-            <p>{{ service.description }}</p>
-            <h4>{{ model.serviceReferencesTitle }}</h4>
-            <p>{{ service.references }}</p>
+            <p><b>{{ model.serviceDescriptionTitle }}: </b>{{ service.description }}</p>
+            <p><b>{{ model.serviceReferencesTitle }}: </b>{{ service.references }}</p>
         </div>
     </div>
 
