--- a/app/styles/_animation.scss
+++ b/app/styles/_animation.scss
@@ -3,7 +3,7 @@
 // TODO comment this in after preventing these rules from applying on the rn-carousel (it creates a duplication bug)
 /*
 #wrap {
-  //min-height: $tileHeight;
+  //min-height: $c-tile-height;
   //position: relative;
 }
 
