--- a/app/views/header.html
+++ b/app/views/header.html
@@ -27,31 +27,7 @@
         </div>
         <div class="col-md-9">
             <!-- NOTE: tab-indexes 11-30 are reserved for main navigation -->
-            <nav id="main-nav">
-                <ul class="list-inline pull-right">
-                    <li>
-                        <a tabindex="11" href="/services.html">Services</a>
-<!--
-                        <ul class="list-unstyled">
-                            <li><a href="#">Global Services</a></li>
-                            <li><a href="#">Engagement Models</a></li>
-                        </ul>
--->
-                    </li>
-                    <li>
-                        <a tabindex="12" href="/training.html">Training</a>
-                    </li>
-                    <li>
-                        <a tabindex="13" href="/business-relations.html">Business Relations</a>
-                    </li>
-                    <li>
-                        <a tabindex="14" href="/staff.html">Management</a>
-                    </li>
-                    <li>
-                        <a tabindex="15" href="/contact-us.html">Contact</a>
-                    </li>
-                </ul>
-            </nav>
+            <main-navigation></main-navigation>
         </div>
 
     </div>
