--- a/app/views/home.html
+++ b/app/views/home.html
@@ -13,7 +13,7 @@
 -->
         </div>
         <div class="col-md-4">
-            <section ng-include="'views/partials/what-we-do.html'"></section>
+            <section class="what-we-do" ng-include="'views/partials/what-we-do.html'"></section>
         </div>
     </div>
 
@@ -26,7 +26,7 @@
         </div>
         <div class="col-md-4">
             <section class="acknowledgments-box">
-                <h1>Our customers say</h1>
+                <h2>Our customers say</h2>
                 <div acknowledgments></div>
             </section>
         </div>
