--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -2,54 +2,11 @@
   padding-bottom: 20px;
 }
 
-#main-nav {
-  padding-top: 30px;
-  ul > li {
-    position: relative;
-    padding: 0 0 0 2em;
-
-    > a {
-      padding-bottom: 6px;
-      font-size: 1.3em;
-      line-height: 1;
-    }
-
-    > a + ul {
-      position: absolute;
-      top: calc(1.3em + 6px);
-      z-index: 9999;
-      display: none;
-      width: 14em;
-      padding: .2em .7em;
-      background-color: #fff;
-
-      li {
-        padding: 0;
-
-        a {
-          display: block;
-          padding: .7em;
-          font-size: 1em;
-          color: $text-color;
-
-          &:hover {
-            color: $c123Color;
-          }
-
-          // TODO ?
-          &:not(:last-child) {
-            border-bottom: 1px solid #aaa;
-          }
-        }
-      }
-    }
-
-    > a + ul:hover,
-    > a:hover + ul {
-      display: block;
-    }
-  }
+#wrap:before,
+#header-top {
+  //background-color: $c-main-gradient-bottom;
 }
+
 
 #header-main {
   padding: 30px 1em 0;
@@ -58,12 +15,8 @@
   }
   .logo {
     position: relative;
-    //display: block;
-    //width: 100px;
-    //height: 100px;
     //background: url('/images/123completed-logo.png') 50% 50% no-repeat;
     //background-size: contain;
-    //margin-bottom: 1em;
     span {
       height: 50px;
       color: #fff;
