--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -7,12 +7,12 @@ body {
 #wrap {
   min-height: 100%;
   height: auto;
-  margin: 0 auto $footerHeight * -1;
-  padding: 0 0 $footerHeight;
+  margin: 0 auto $c-footer-height * -1;
+  padding: 0 0 $c-footer-height;
 }
 
 #footer {
-  height: $footerHeight;
+  height: $c-footer-height;
 }
 
 /* customization */
@@ -23,28 +23,13 @@ body {
   top: 0;
   left: 0;
   right: 0;
-  height: $topLinksHeight;
-  border-bottom: 1px solid $mainGradientBottom;
+  height: $c-header-top-height;
+  border-bottom: 1px solid $c-main-gradient-bottom;
 }
 
 #header-top {
-  height: $topLinksHeight;
-  line-height: $topLinksHeight;
-  a {
-    color: #fff;
-  }
-}
-
-#header,
-#footer {
-  a {
-    color: $compositeColor;
-    font-weight: bold;
-    &:hover {
-      color: white;
-      text-shadow: 0 0 4px #ddd;
-    }
-  }
+  height: $c-header-top-height;
+  line-height: $c-header-top-height;
 }
 
 
@@ -52,16 +37,16 @@ body {
 /* TODO make more specific, so it would apply only to layout boxes */
 #main {
   section {
-    min-height: $tileHeight;
+    min-height: $c-tile-height;
     margin-bottom: $grid-gutter-width;
-    padding: $boxPad / 2 $boxPad + 12 $boxPad + 12;
-    background-color: $compositeColor;
+    padding: $c-box-pad / 2 $c-box-pad + 12 $c-box-pad + 12;
+    background-color: $c-composite-color;
     //background-color: #008dc6;
   }
 }
 
 #home section {
-  height: $tileHeight;
+  height: $c-tile-height;
   > h1 {
     //margin: -10px 0 0;
     border-bottom: 0 none; // TODO create conditional classname for non-home pages to avoid negative overrides like this one
