--- a/app/styles/_staff.scss
+++ b/app/styles/_staff.scss
@@ -3,10 +3,10 @@
 
   .member {
     position: relative;
-    //margin: $boxPad * 1.5 $boxPad $boxPad * .5;
-    //padding: $boxPad * .75 $boxPad * .75 $boxPad * .25 + 32px;
+    //margin: $c-box-pad * 1.5 $c-box-pad $c-box-pad * .5;
+    //padding: $c-box-pad * .75 $c-box-pad * .75 $c-box-pad * .25 + 32px;
     margin: $grid-gutter-width 0 $grid-gutter-width * .5;
-    padding: $boxPad;
+    padding: $c-box-pad;
     border: 1px solid #eee;
     background-color: #f6f6f6;
     //cursor: pointer;
