--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -1,20 +1,20 @@
-/*
-colors:
-  #619ee7
-  #164b8a
-  #4488d5
-*/
 
-/* custom variables
+/* layout
 -------------------------------------------------- */
 
-$footerHeight: 220px;
-$topLinksHeight: 40px;
-$tileHeight: 420px;
-$compositeColor: #e6e6e6;
-$shadowColor: #555;
-$c123Color: #4488d5;
-$mainGradientTop: #070f22;
-$mainGradientBottom: #1d314e;
+$c-footer-height: 220px;
+$c-header-top-height: 40px;
+$c-tile-height: 390px;
+$c-box-pad: 32px;
 
-$boxPad: 32px;
+/* colors
+-------------------------------------------------- */
+
+$c-composite-color: $c-color-base-05;
+$c-shadow-color: $c-color-base-04;
+$c-123-color: $c-color-base-01;
+$c-main-gradient-top: $c-color-base-03;
+$c-main-gradient-bottom: $c-color-base-02;
+$c-text-main-color: $c-color-base-04;
+$c-link-composite-color: $c-color-base-06;
+$c-link-composite-color-hover: $c-color-base-07;
