--- a/app/views/partials/who-we-are.html
+++ b/app/views/partials/who-we-are.html
@@ -1,4 +1,4 @@
-<h1>Who we are</h1>
+<h2>Who we are</h2>
 
 <p>
     We are a leading System Integrator, R&amp;D, IT Consulting and Training
@@ -7,8 +7,4 @@
     as well as agile startups R&amp;D environments.
 </p>
 
-<p>
-    We are not afraid of any challenge and we have
-    <a href="#success-stories.html">the references</a>
-    to prove it.
-</p>
+<a class="home-link pull-right" href="/success-stories.html">See references</a>
