restyling and creating island segments. separating services to their own sub-pages.

--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -9,6 +9,7 @@ $c-color-base-04: #555555 !default;
 $c-color-base-05: #e6e6e6 !default;
 $c-color-base-06: #d6d6d6 !default;
 $c-color-base-07: #ffffff !default;
+$c-color-base-08: #244569 !default;
 
 
 
