--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -35,7 +35,7 @@
                 Built with <a href="http://angularjs.org/">Angular JS</a>
             </p>
             <p>
-                Crafted by <a href="/management.html#eliran-malka">Eliran Malka</a>
+                Crafted by <a ng-href="/staff.html?scrollTo=member-eliran-malka">Eliran Malka</a>
             </p>
         </div>
 
