--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -1,10 +1,8 @@
 
-/* background / foreground */
+/* baseline styles */
 
 body {
-  //@include gradient-vertical(#002355,#3478aa);
-  //@include gradient-vertical(#001642,#00467F);
-  @include gradient-vertical($c-main-gradient-top, $c-main-gradient-bottom);
+  //@include gradient-vertical($c-main-gradient-top, $c-main-gradient-bottom);
   background-color: $c-main-gradient-bottom;
 }
 
@@ -30,6 +28,7 @@ body {
 
 h1 {
   font-size: $font-size-base * 1.8;
+  margin-bottom: 1em;
 }
 
 h2 {
@@ -48,7 +47,7 @@ h4, h5, h6 {
   font-weight: bold;
 }
 
-a, a:link, a:visited, a:hover, a:active {
+a, a:link, a:visited, a:hover, a:active, a:focus {
   outline: 0 none;
   text-decoration: none !important;
   @include transition(color, text-shadow, .25s);
@@ -69,6 +68,13 @@ a, a:link, a:visited, a:hover, a:active {
       }
     }
   }
+}
+
+/* generic components */
+
+.island {
+  padding: .5em 2em;
+  font-size: $font-size-base * 1.2;
 }
 
 /* bootstrap specific */
