--- a/app/styles/_services.scss
+++ b/app/styles/_services.scss
@@ -1,13 +1,25 @@
 .services {
 
-  .global-services-map {
-    height: 460px;
-    padding: $c-box-pad;
+  .global-services {
 
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: 0 none;
+    .global-services-map {
+      height: 460px;
+      padding: $c-box-pad;
+
+      iframe {
+        width: 100%;
+        height: 100%;
+        border: 0 none;
+      }
+    }
+  }
+
+  .engagement-models {
+
+    .service-description {
+      padding: $c-box-pad;
+      background-color: #fff;
     }
   }
 }
+
