--- a/app/views/partials/business-relations.html
+++ b/app/views/partials/business-relations.html
@@ -1,7 +1,6 @@
 <section>
     <h1>Business Relations</h1>
-
-    <p>
+    <p class="island">
         We at 1 2 3 Completed are taking pride at our great customer relationships. Our customer's success
         is our success. We are working hand in hand with our customers in order to guarantee satisfaction
         and we are flexible enough to work with any business model that will enable our customers to
