--- a/app/views/partials/training.html
+++ b/app/views/partials/training.html
@@ -1,7 +1,7 @@
 <section class="pad-btm">
     <h1>Training</h1>
 
-    <p>
+    <p class="island">
         1 2 3 Completed specializes in high quality training for the IT
         workforce. While our responsibility is to teach Development Lifecycle
         methodologies well as technology skills, our company's goal is to make
@@ -11,19 +11,5 @@
         knowledge, we develop courseware for the latest methodologies &amp;
         technologies on the market long before the educational departments in
         those software companies develop their official courses.
-    </p>
-</section>
-
-<section class="letter testimonial">
-    <blockquote>
-        123Completed consulting and training services help us win accounts and
-        maintain existing customers to the highest customer satisfactory level.
-        We would like to thank you for developing our new education courseware as
-        well as delivering it worldwide with such great success. Thank you for
-        providing us with such a great service and for being such a committed
-        agile partner.
-    </blockquote>
-    <p class="ref">
-        Gershon Diner, VP Customer Services &amp; Support, GigaSpaces
     </p>
 </section>
