--- a/app/views/staff-member-template.html
+++ b/app/views/staff-member-template.html
@@ -1,4 +1,4 @@
-<div class="member">
+<div class="member" id="{{ data.id }}">
     <img class="member-image img-thumbnail" ng-src="{{ data.imagePath }}" alt="{{ data.name }}'s photo" width="120" height="120" />
     <h2>{{ data.name }}, {{ data.jobTitle }}</h2>
     <p>{{ data.body }}</p>
