--- a/app/views/scaffold-template.html
+++ b/app/views/scaffold-template.html
@@ -1,7 +1,7 @@
 <div id="wrap">
     <header id="header" ng-include="'views/header.html'"></header>
-    <div class="container">
-        <div ng-view id="main"></div>
+    <div class="container" ng-controller="MainCtrl">
+        <div ng-view id="main" fn="scroll()"></div>
     </div>
 </div>
 <footer id="footer" ng-include="'views/footer.html'"></footer>
